# 300kpersecondbot

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  app.sh  commands.sh  docker-compose.yml  pyproject.toml
.github/workflows/: ruff.yml
commands/: prefect.sh
docker/: Dockerfile  docker-compose.yml
notebook/: fetch_arxiv.ipynb
src/: app.py  data_fetch.py  db_operations.py  sandbox.py
src/app/: app.py  bot.py  collector.py  loader.py
src/config/: config.py
src/dags/: collector_dag.py  sender_dag.py
src/database/: postgres_manager.py
